oop_mro/tests/trybuild/fail_unsupported_method.stderr
error: extern methods are not supported
 --> tests/trybuild/fail_unsupported_method.rs:5:9
  |
5 |         extern "C" fn speak(&self) -> String {
  |         ^^^^^^^^^^
